Fixed clock text alignment

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -136,6 +136,9 @@ body, html{
   @media screen and (max-width: 500px) {
       font-size: 30pt;
     }
+  @media screen and (min-width: 1601px) {
+    margin-right: 30px;
+  }
 }
 
 .padding-200px {
@@ -390,3 +393,4 @@ li:nth-child(4){
   text-align: center;
   margin-bottom: 10px;
 }
+
